# TransLearn

./: .dockerignore  .gitignore  Dockerfile  README.md  backend.py  main.py  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: index.html
