[project]
name = "translearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.0",
    "fpdf2>=2.8.3",
    "google-cloud>=0.34.0",
    "google-cloud-texttospeech>=2.27.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-groq>=0.3.5",
    "uvicorn>=0.35.0",
    "youtube-transcript-api>=1.1.1",
]
